--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
-    "autoprefixer": "^9.5.0",
+    "autoprefixer": "^9.7.1",
     "babel-loader": "8.0.5",
     "clean-webpack-plugin": "2.0.1",
     "compression-webpack-plugin": "^3.0.0",
@@ -21,9 +21,9 @@
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "4.11.0",
+    "node-sass": "^4.12.0",
     "postcss-loader": "3.0.0",
-    "prettier": "^1.16.4",
+    "prettier": "^1.18.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "webpack": "4.29.6",
