--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "2.1.1",
     "cssnano": "4.1.10",
     "file-loader": "3.0.1",
+    "hmr-filter-webpack-plugin": "^1.0.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
